--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0.0"
+pydantic = "1.*"
+numpy = "1.*"
+tqdm = "4.*"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.*"
