--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,12 @@ pydantic = "1.*"
 numpy = "1.*"
 tqdm = "4.*"
 faiss-cpu = {version = "1.*", optional = true}
+pinecone-client = {version = "2.*", optional = true}
 
 [tool.poetry.extras]
-all = ["faiss-cpu"]
+all = ["faiss", "pinecone"]
 faiss = ["faiss-cpu"]
+pinecone = ["pinecone-client"]
 
 [tool.poetry.dev-dependencies]
 black = "*"
