--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,12 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">= 3.7.1, < 4.0.0"
-pydantic = "1.*"
 numpy = "1.*"
-tqdm = "4.*"
 faiss-cpu = {version = "1.*", optional = true}
 pinecone-client = {version = "2.*", optional = true}
 
 [tool.poetry.extras]
-all = ["faiss", "pinecone"]
+all = ["faiss-cpu", "pinecone-client"]
 faiss = ["faiss-cpu"]
 pinecone = ["pinecone-client"]
 
