--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pep440-version-utils = "*"
 pytest = "*"
 pytest-asyncio = "*"
 pytest-cov = "*"
+toml = "*"
 yapf = "*"
 
 [tool.poetry.group.dev.dependencies]
@@ -32,8 +33,15 @@ pep440-version-utils = "*"
 pytest = "*"
 pytest-asyncio = "*"
 pytest-cov = "*"
+toml = "*"
 yapf = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.yapf]
+based_on_style = "yapf"
+indent_width = 4
+column_limit = 88
+blank_lines_between_top_level_imports_and_variables = 2
