--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -6,8 +6,8 @@ click==8.1.3 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 colorama==0.4.6 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0" and sys_platform == "win32" or python_full_version >= "3.7.1" and python_full_version < "4.0.0" and platform_system == "Windows"
 coverage[toml]==6.5.0 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 dnspython==2.2.1 ; python_full_version >= "3.7.1" and python_version < "4.0"
-exceptiongroup==1.0.1 ; python_full_version >= "3.7.1" and python_version < "3.11"
-faiss-cpu==1.7.2 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
+exceptiongroup==1.0.4 ; python_full_version >= "3.7.1" and python_version < "3.11"
+faiss-cpu==1.7.3 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 flake8==5.0.4 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 idna==3.4 ; python_full_version >= "3.7.1" and python_version < "4"
 importlib-metadata==4.2.0 ; python_full_version >= "3.7.1" and python_version < "3.8"
@@ -17,21 +17,22 @@ mccabe==0.7.0 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 mypy-extensions==0.4.3 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 numpy==1.21.1 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 packaging==20.9 ; python_full_version >= "3.7.1" and python_version < "4.0"
-pathspec==0.10.1 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
+pathspec==0.10.2 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 pep440-version-utils==0.3.0 ; python_full_version >= "3.7.1" and python_version < "4.0"
 pinecone-client==2.0.13 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
-platformdirs==2.5.3 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
+platformdirs==2.5.4 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 pluggy==1.0.0 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 pycodestyle==2.9.1 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 pyflakes==2.5.0 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 pyparsing==3.0.9 ; python_full_version >= "3.7.1" and python_version < "4.0"
-pytest-asyncio==0.20.1 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
+pytest-asyncio==0.20.2 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 pytest-cov==4.0.0 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 pytest==7.2.0 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 python-dateutil==2.8.2 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 pyyaml==6.0 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 requests==2.28.1 ; python_full_version >= "3.7.1" and python_version < "4"
 six==1.16.0 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
+toml==0.10.2 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
 tomli==2.0.1 ; python_full_version >= "3.7.1" and python_full_version < "3.11.0a7"
 typed-ast==1.5.4 ; python_version < "3.8" and implementation_name == "cpython" and python_full_version >= "3.7.1"
 typing-extensions==4.4.0 ; python_full_version >= "3.7.1" and python_full_version < "4.0.0"
